fix: border-width on safari

--- a/js-widgets/slider.css
+++ b/js-widgets/slider.css
@@ -22,7 +22,9 @@
 
 
 .slider::-webkit-slider-runnable-track{
+  -webkit-appearance: none;
   border-radius: 10px;
+  border-width: 2px !important;
   border: solid;
 /*   border-color: #B4B4B4; */
   border-color: #787878;
